--- a/styles.css
+++ b/styles.css
@@ -19,12 +19,14 @@
 
 .chunkupload-label .chunkupload-browse {
     background-color: #e9ecef;
-    flex: 1 1 10%;
+    flex: 1 1 20%;
 }
 
 .chunkupload-label .chunkupload-left {
-    flex: 1 1 90%;
+    flex: 1 1 80%;
     position: relative;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .chunkupload-label .chunkupload-progress {
