--- a/templates/filepicker.mustache
+++ b/templates/filepicker.mustache
@@ -24,7 +24,7 @@
     <label class="custom-file-label chunkupload-label" for="{{elid}}_file">
         <span class="chunkupload-browse btn-secondary">{{#str}}browse, core_editor{{/str}}</span>
         <span class="chunkupload-left">
-            <span class="chunkupload-icon" {{^value}}hidden{{/value}}>
+            <span class="chunkupload-icon" {{^showicon}}hidden{{/showicon}}>
                 {{#pix}}i/checked, core,{{/pix}}
             </span>
             <span class="chunkupload-filename">{{filenamestring}}</span>
