--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.custom-file-input ~ .custom-file-label.chunkupload-label {
+.local_chunkupload .custom-file-input ~ .custom-file-label.chunkupload-label {
     padding: 0;
     border-radius: 0;
     display: flex;
@@ -7,28 +7,28 @@
     margin-bottom: 0;
 }
 
-.custom-file-input ~ .custom-file-label.chunkupload-label:after {
+.local_chunkupload .custom-file-input ~ .custom-file-label.chunkupload-label:after {
     display: none;
 }
 
-.chunkupload-label > span {
+.local_chunkupload .chunkupload-label > span {
     height: 100%;
     text-align: center;
     padding: .375rem .75rem;
 }
 
-.chunkupload-label .chunkupload-browse {
+.local_chunkupload .chunkupload-label .chunkupload-browse {
     flex: 1 1 20%;
 }
 
-.chunkupload-label .chunkupload-left {
+.local_chunkupload .chunkupload-label .chunkupload-left {
     flex: 1 1 80%;
     position: relative;
     white-space: nowrap;
     overflow: hidden;
 }
 
-.chunkupload-label .chunkupload-progress {
+.local_chunkupload .chunkupload-label .chunkupload-progress {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -36,6 +36,5 @@
     background: #578014;
 }
 
-.chunkupload-label .chunkupload-icon {
+.local_chunkupload .chunkupload-label .chunkupload-icon {
     color: green;
-}
