--- a/templates/filepicker.mustache
+++ b/templates/filepicker.mustache
@@ -19,7 +19,7 @@
 
 }}
 <input type="hidden" name="{{elname}}" id="{{elid}}" value="{{value}}" class=""/>
-<div class="custom-file">
+<div class="custom-file local_chunkupload">
     <input type="file" class="custom-file-input" id="{{elid}}_file">
     <label class="custom-file-label chunkupload-label" for="{{elid}}_file">
         <span class="chunkupload-browse btn-secondary">{{#str}}browse, core_editor{{/str}}</span>
