--- a/templates/filepicker.mustache
+++ b/templates/filepicker.mustache
@@ -31,4 +31,5 @@
             <span class="chunkupload-progress"></span>
         </span>
     </label>
+    <span class="chunkupload-delete"  {{^showdelete}}hidden{{/showdelete}}>{{#pix}}i/delete, core,{{/pix}}</span>
 </div>
