Refactor for Travis

--- a/templates/filepicker.mustache
+++ b/templates/filepicker.mustache
@@ -17,6 +17,16 @@
 {{!
     @template local_chunkupload/filepicker
 
+    Example context (json):
+    {
+      "elid": "id_test",
+      "elname": "test",
+      "value": 5313393439,
+      "filenamestring": "Choose a file",
+      "showicon": false,
+      "showdelete": false,
+      "filesize": "2MB"
+    }
 }}
 <input type="hidden" name="{{elname}}" id="{{elid}}" value="{{value}}" class=""/>
 
