add aria label for file uploaded icon

--- a/templates/filepicker.mustache
+++ b/templates/filepicker.mustache
@@ -40,7 +40,7 @@
             <span class="chunkupload-browse btn-secondary">{{#str}}browse, core_editor{{/str}}</span>
             <span class="chunkupload-left">
                 <span class="chunkupload-icon" {{^showicon}}hidden{{/showicon}}>
-                    {{#pix}}i/checked, core,{{/pix}}
+                    {{#pix}}i/checked, core,{{#str}} uploaded, local_chunkupload {{/str}}{{/pix}}
                 </span>
                 <span class="chunkupload-filename">{{filenamestring}}</span>
                 <span class="chunkupload-progress"></span>
