add aria label for delete icon

--- a/templates/filepicker.mustache
+++ b/templates/filepicker.mustache
@@ -46,6 +46,6 @@
                 <span class="chunkupload-progress"></span>
             </span>
         </label>
-        <span class="chunkupload-delete"  {{^showdelete}}hidden{{/showdelete}}>{{#pix}}i/delete, core,{{/pix}}</span>
+        <span class="chunkupload-delete"  {{^showdelete}}hidden{{/showdelete}}>{{#pix}}i/delete, core,{{#str}} deletefile, local_chunkupload {{/str}}{{/pix}}</span>
     </div>
 </div>
