Change progressbar style
By adjusting the design of the progress bar to utilize the entire height
available rather than being restricted to a mere 6 pixels, we
significantly enhance its visibility and prominence on the interface,
making it stand out more clearly and effectively draw the user's
attention.

--- a/styles.css
+++ b/styles.css
@@ -33,21 +33,25 @@
 }
 
 .local_chunkupload .chunkupload-label .chunkupload-left .chunkupload-filename {
-    width: 70%;
+    width: 100%;
     overflow: hidden;
     display: inline-block;
     text-overflow: ellipsis;
+    position: absolute;
+    left: 0;
 }
 
 .local_chunkupload .chunkupload-label .chunkupload-progress {
     position: absolute;
     bottom: 0;
     left: 0;
-    height: 6px;
-    background: #578014;
+    height: 100%;
+    background: #71A81A;
 }
 
 .local_chunkupload .chunkupload-label .chunkupload-icon {
+    position: absolute;
+    left: 8px;
     display: inline-block;
     vertical-align: top;
     color: green;
